2004-09-27	Benedikt Meurer <benny@xfce.org>

	* HACKING: Added note about bugzilla update to Release Process.

2004-09-26	Benedikt Meurer <benny@xfce.org>

	* icons/scalable: Added scalable versions of the terminal icons,
	  designed by Francois Le Clainche <fleclainche@wanadoo.fr>.
	* icons/48x48: Use new icons by Francois Le Clainche
	  <fleclainche@wanadoo.fr>.

2004-09-25	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Version 0.1.6, depends on exo-0.1 >= 0.1.1.
	* po/de.po: Translation updates.
	* terminal/terminal-window.c: Setup correct translation domain 
	  for the actions.
	* HACKING: Added note to update translations to Release process
	  section.
	* terminal/terminal-preferences-dialog.c, terminal/terminal-widget.c,
	  terminal/terminal-preferences.c: Remove custom command functionality,
	  since its useless, because Terminal offers -x/--execute command
	  line option. Remove visible bell option, as the visible bell provided
	  by VTE isn't worth to have an option.
	* terminal/terminal-preferences-dialog.c, terminal/terminal-window.c,
	  terminal/terminal-preferences.c, terminal/terminal-shortcut-editors.c:
	  Remove compact mode and replace it by two other options,
	  'show menubar' and 'show borders'.
	* terminal/terminal-preferences-dialog.c: Use GtkFrame instead of
	  XfceFramebox for smoother look.
	* terminal/terminal-widget.c: Bind to realize signal of VteTerminal
	  for setting terminal parameters instead of overloading the map
	  method of GtkWidget. Fix problem with monochrom mc on some linux
	  systems by explicitly setting TERM and COLORTERM environment
	  variables.
	* terminal/terminal-window.c: Added border and Help button to the
	  Set Title dialog. Added Report a bug to the Help menu.
	* TerminalHelp.in: Added second parameter to allow supplying a
	  page section id.
	* doc/: Lots of documentation updates. All images have been updated
	  to display the new xfwm default theme and to keep up with the