@@ -5,5 +5,5 @@ Some pieces of code where adopted from gnome-terminal (e.g. the DnD code
 is based on the code found in gnome-terminal, also parts of the geometry
 management were taken from gnome-terminal).
 
-Pieces of the online documentation where copied from Konsole and the
+Parts of the online documentation where copied from Konsole and the
 gnome user guide.
