@@ -34,3 +34,4 @@ Release process
   9) upload the tarball to os-cillation ftp
  10) Run /etc/os-scripts/update-docs-from-svn.sh on os-cillation webserver.
  11) Update freshmeat entry.
+ 12) Add new version to bugzilla product at http://bugs.os-cillation.de
