@@ -81,3 +81,51 @@ static const GdkPixdata stock_newwindow = {
 };
 
 
+/* GdkPixbuf RGBA C-Source image dump 1-byte-run-length-encoded */
+
+static const GdkPixdata stock_reportbug = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 846, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */
+  "\205\377\377\377\0\5\0\0\0\26\0\0\0\177\377\377\377\0\0\0\0(\0\0\0;\213"
+  "\377\377\377\0\6\0\0\0\256\0\0\0\317\0\0\0[PPP\375TTT\376\0\0\0t\211"
+  "\377\377\377\0\14\0\0\0(\0\0\0\377\0\0\0""7\15\15\15\255\313\313\313"
+  "\377\212\212\212\377,,,\316\0\0\0#\0\0\0d\0\0\0\11\377\377\377\0\0\0"
+  "\0\6\203\377\377\377\0L\0\0\0\16\0\0\0(\0\0\0\375\6\7\6\247\14\15\14"
+  "\343\36\40\36\377)*)\377\0\0\0\272VVV\367VVV\377;;;\335\0\0\0B\0\0\0"
+  "\305\377\377\377\0\0\0\0""3\0\0\0\327\0\0\0\372\0\0\0\237\24\26\24\344"
+  "}\207\177\364\254\276\255\377\250\277\250\377\214\243\213\377,5+\370"
+  "QTQ\377\230\230\230\377GGG\372\0\0\0\177\0\0\0\307\0\0\0\11\0\0\0\330"
+  "\0\0\0\261\0\0\0\205!$!\361\260\277\262\377\267\310\270\377\257\303\257"
+  "\377\245\275\245\377\234\266\232\377\222\260\217\3773\77""2\376QTP\377"
+  "\16\16\16\252\0\0\0\254\0\0\0\246\0\0\0X\0\0\0\336\0\0\0\23\23\26\23"
+  "\333\242\264\242\377\262\305\263\377\257\303\260\377\251\277\251\377"
+  "\240\271\240\377\227\263\226\377\216\255\213\377z\231v\377\21\25\20\357"
+  "\0\0\0\247\0\0\0\372\0\0\0\77\0\0\0\7\0\0\0\4\4\5\4dWdW\366\250\276\250"
+  "\377\251\277\251\377\246\275\246\377\241\272\240\377\232\265\230\377"
+  "\222\260\220\377\211\252\206\377\203\246\177\377\",!\371\0\0\0\261\0"
+  "\0\0R\202\377\377\377\0\23\0\0\0*\25\30\24\311\204\233\203\377\237\271"
+  "\236\377\240\271\237\377\235\267\234\377\231\264\227\377\223\260\221"
+  "\377\214\254\210\377\204\246\200\377\203\246\177\3773A2\374\0\0\0\321"
+  "\0\0\0Q\377\377\377\0\0\0\0\"\0\0\0\365\21\25\21\377\224\261\221\377"
+  "\202\227\263\225\377\4\225\262\222\377\221\257\216\377\213\253\210\377"
+  "\205\247\201\377\202\203\246\177\377\10*5)\366\0\0\0\237\0\0\0\371\0"
+  "\0\0+\0\0\0\240\0\0\0\304\24\30\23\344\214\254\211\377\202\216\255\213"
+  "\377\2\214\254\211\377\210\251\205\377\204\203\246\177\377\10\22\27\22"
+  "\346\377\377\377\0\0\0\0\370\0\0\0H\0\0\0\266\0\0\0\212\26\34\26\324"
+  "{\232w\377\202\205\247\201\377\205\203\246\177\377\11h\204e\377\12\15"
+  "\11\367\0\0\0\31\0\0\0\367\0\0\0G\0\0\0\275\0\0\0\203\22\27\21wFYD\376"
+  "\206\203\246\177\377\13\201\244~\377\25\33\25\344\0\0\0\323\0\0\0\246"
+  "\0\0\0J\0\0\0\6\0\0\0\304\0\0\0|\0\0\0\3\23\30\22\343r\220n\377\204\203"
+  "\246\177\377\5\177\242|\377)4'\343\2\3\2j\0\0\0\224\0\0\0\267\202\377"
+  "\377\377\0\16\0\0\0U\0\0\0$\377\377\377\0\0\0\0*\17\23\17\340FYD\362"
+  "k\210h\377v\225r\377MbK\362\17\23\16\331\1\1\1U\0\0\0K\0\0\0\374\0\0"
+  "\0a\206\377\377\377\0\11\0\0\0\7\0\1\0d\16\22\15\251\6\10\6\263\0\0\0"
+  "f\0\0\0\27\377\377\377\0\0\0\0C\0\0\0[\203\377\377\377\0",
+};
+
+
