@@ -1,3 +1,12 @@
+2004-09-29	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/stock-icon-reportbug.png, terminal/terminal-window.c,
+	  terminal/main.c: Added Report Bug icon from Francois Le Clainche.
+
+2004-09-28	Benedikt Meurer <benny@xfce.org>
+
+	* TODO: Added note about TERM environment variable.
+
 2004-09-27	Benedikt Meurer <benny@xfce.org>
 
 	* HACKING: Added note about bugzilla update to Release Process.
